[package]
name = "leo"
version = "0.1.0"
edition = "2021"
description = "A CLI note-taking tool for programmers"
authors = []

[[bin]]
name = "leo"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
colored = "2"
rustyline = "14"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
base64 = "0.22"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
local-ip-address = "0.6"
qrcode = "0.14"
